syntax = "proto3";

option java_multiple_files = true;
option java_package = "ovaphlow.himawari.service.biz";

import "reply.proto";

package biz;

service Picture {
    rpc List (ListPictureRequest) returns (Reply) {}
    rpc Save (SavePictureRequest) returns (Reply) {}
    rpc Get (GetPictureRequest) returns (Reply) {}
}

message ListPictureRequest { int32 archive_id = 1; }

message SavePictureRequest {
    string uuid = 1;
    int32 archive_id = 2;
    string doc = 3;
}

message GetPictureRequest {
    int32 id = 1;
    string uuid = 2;
    int32 archive_id = 3;
}
